fixed transaction history and explorer config
